test_regress/t/t_preproc_inc_bad.out
%Error: t/t_preproc_inc_inc_bad.vh:11:1: syntax error, unexpected endmodule, expecting IDENTIFIER or randomize
   11 | endmodule
      | ^~~~~~~~~
        t/t_preproc_inc_bad.v:10:1: ... note: In file included from t_preproc_inc_bad.v
%Error: Exiting due to
